# Sparseflow

./: .gitignore  LICENSE  OVERVIEW.md  README.md  pyproject.toml  requirements.txt
sparseflow/: __init__.py  __main__.py
sparseflow/core/: __init__.py  config.py  weight_manager.py
sparseflow/examples/: __init__.py  demo_generation.py
sparseflow/models/: __init__.py  opt_sparse.py
sparseflow/orchestration/: __init__.py  neuron_predictor.py  transfer_coordinator.py
sparseflow/utils/: __init__.py  tensor_ops.py
