[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparseflow"
version = "0.1.0"
description = "Adaptive sparse model offloading for efficient large language model inference"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SparseFlow Team"}
]
keywords = ["machine-learning", "deep-learning", "transformers", "optimization", "inference", "sparse-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sparseflow"
"Bug Tracker" = "https://github.com/yourusername/sparseflow/issues"
"Documentation" = "https://github.com/yourusername/sparseflow#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["sparseflow*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

